Update for mostly final

--- a/LambdaProject/LambdaProject/src/LambdaProject/LambdaProject.csproj
+++ b/LambdaProject/LambdaProject/src/LambdaProject/LambdaProject.csproj
@@ -8,9 +8,12 @@
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Amazon.CDK.AWS.S3" Version="1.98.0" />
         <PackageReference Include="Amazon.Lambda.Core" Version="1.2.0" />
         <PackageReference Include="Amazon.Lambda.S3Events" Version="2.0.1" />
         <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.1.0" />
         <PackageReference Include="Amazon.Lambda.SQSEvents" Version="1.2.0" />
+        <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.11" />
+        <PackageReference Include="AWSSDK.SQS" Version="3.7.0.11" />
     </ItemGroup>
 </Project>
