--- a/Infrastructure/package.json
+++ b/Infrastructure/package.json
@@ -28,6 +28,7 @@
     "@aws-cdk/aws-lambda": "^1.83.0",
     "@aws-cdk/aws-ecr": "^1.83.0",
     "@aws-cdk/aws-dynamodb": "^1.83.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.83.0",
     "@aws-cdk/core": "^1.83.0"
   }
 }
