--- a/LambdaProject/LambdaProject/test/LambdaProject.Tests/LambdaProject.Tests.csproj
+++ b/LambdaProject/LambdaProject/test/LambdaProject.Tests/LambdaProject.Tests.csproj
@@ -3,10 +3,13 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Amazon.CDK.AWS.S3" Version="1.98.0" />
         <PackageReference Include="Amazon.Lambda.Core" Version="1.2.0" />
         <PackageReference Include="Amazon.Lambda.S3Events" Version="2.0.1" />
         <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.2.0" />
         <PackageReference Include="Amazon.Lambda.SQSEvents" Version="1.2.0" />
+        <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.11" />
+        <PackageReference Include="AWSSDK.SQS" Version="3.7.0.11" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
         <PackageReference Include="xunit" Version="2.3.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
